<resources>
    <string name="app_name">Kinwae</string>
    <string name="personal">Personal</string>
    <string name="back">Back</string>
    <string name="up_navigation_icon">up navigation icon</string>
    <string name="open_new_account">Open New Account</string>
    <string name="Next">Next</string>
    <string name="country_code">+234</string>
    <string name="email">Email</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="type_branch_name">Type in branch name</string>
    <string name="select_preferred_branch">Select Preferred Branch</string>
    <array name="account_steps">
        <item>Personal</item>
        <item>Contact</item>
        <item>Upload</item>
    </array>
    <string-array name="new_account_step">
        <item>Personal</item>
        <item>Contact</item>
        <item>Upload</item>
    </string-array>
    <string-array name="states">
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Anambra</item>
        <item>Akwa Ibom</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Enugu</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Abuja</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nasarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
    </string-array>

</resources>
