<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/nsv_contact"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:text="@string/Next"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/button"
                app:layout_constraintWidth_percent="0.9"
                android:background="@drawable/rc_button_background" android:textColor="@color/colorYellow"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="@drawable/rc_edit_text_background"
                app:layout_constraintWidth_percent="0.9"
                android:id="@+id/ll_email"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_email">

            <androidx.appcompat.widget.AppCompatImageView
                    android:src="@drawable/message"
                    android:padding="14dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:layout_width="48dp"
                    android:layout_height="48dp"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@color/colorPrimary"
                    android:id="@+id/et_email"
                    android:padding="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/email"/>

        </LinearLayout>
        <TextView
                android:text="@string/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:textStyle="bold"
                android:id="@+id/tv_email" app:layout_constraintStart_toStartOf="@+id/ll_email"
                app:layout_constraintBottom_toTopOf="@+id/ll_email" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ll_email" android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:background="@drawable/rc_edit_text_background"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.48"
                android:id="@+id/ll_phone"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3">

            <androidx.appcompat.widget.AppCompatImageView
                    android:src="@drawable/phone"
                    android:padding="12dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:layout_width="48dp"
                    android:layout_height="48dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_code"
                    android:textColor="@color/colorGray"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <View
                    android:layout_width="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/colorGray"
                    android:layout_height="30dp"/>

            <EditText
                    android:hint="@string/phone"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:ems="10" android:maxLength="11"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:padding="8dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/colorPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <TextView
                android:text="@string/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:textStyle="bold"
                android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/ll_phone"
                app:layout_constraintEnd_toEndOf="@+id/ll_phone"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ll_email"/>
        <TextView
                android:text="@string/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:textStyle="bold"
                android:id="@+id/textView4" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_phone"
                app:layout_constraintStart_toStartOf="@+id/ll_state"
                app:layout_constraintEnd_toEndOf="@+id/ll_state"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:gravity="center_vertical"
                android:background="@drawable/rc_edit_text_background"
                app:layout_constraintWidth_percent="0.9"
                android:layout_height="60dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4" android:id="@+id/ll_state"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

            <Spinner
                    android:id="@+id/sp_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:minHeight="55dp"
                    android:spinnerMode="dropdown">

            </Spinner>

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_state_spinner"
                    android:src="@drawable/ic_down_arrow"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:layout_width="48dp"
                    android:layout_height="48dp"/>

        </LinearLayout>
        <TextView
                android:text="@string/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ll_city"
                app:layout_constraintEnd_toEndOf="@+id/ll_city" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_state"/>
        <LinearLayout
                android:orientation="horizontal" android:gravity="center_vertical"
                android:layout_width="0dp" app:layout_constraintWidth_percent="0.9"
                android:layout_height="60dp" android:layout_marginTop="8dp"
                android:background="@drawable/rc_edit_text_background"
                app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:id="@+id/ll_city">

            <Spinner
                    android:id="@+id/sp_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:minHeight="55dp"
                    android:spinnerMode="dropdown">

            </Spinner>

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_city_spinner"
                    android:src="@drawable/ic_down_arrow"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:layout_width="48dp"
                    android:layout_height="48dp"/>

        </LinearLayout>
        <TextView
                android:text="@string/address"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:textStyle="bold"
                android:id="@+id/Address" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ll_city"
                app:layout_constraintStart_toStartOf="@+id/et_address"
                app:layout_constraintEnd_toEndOf="@+id/et_address"/>
        <EditText
                android:layout_width="0dp" android:maxLines="4" android:lines="4"
                android:layout_height="wrap_content" android:hint="@string/address"
                android:inputType="textMultiLine" app:layout_constraintWidth_percent="0.9"
                android:padding="16dp" android:lineSpacingExtra="8dp" android:textAlignment="textStart"
                android:ems="10" android:background="@drawable/rc_edit_text_background"
                android:id="@+id/et_address" android:layout_marginTop="8dp" android:gravity="start"
                app:layout_constraintTop_toBottomOf="@+id/Address" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/select_preferred_branch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_address"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout4" android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/linearLayout4" android:layout_marginEnd="8dp"/>
    <LinearLayout
            android:orientation="horizontal" android:gravity="center_vertical"
            android:layout_width="0dp" app:layout_constraintWidth_percent="0.9"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:background="@drawable/rc_edit_text_background"
            android:id="@+id/linearLayout4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:background="@color/colorPrimary"
                android:id="@+id/et_preferred_branch"
                android:padding="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:hint="@string/type_branch_name"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:src="@drawable/map_icon"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_width="48dp"
                android:layout_height="48dp"/>

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>