<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/up_navigation_icon"
                    android:src="@drawable/ic_back_arrow" android:id="@+id/iv_back_nav"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="@string/back" android:id="@+id/tv_back"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorGray"
                    android:text="@string/personal" android:id="@+id/tv_personal"/>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <TextView
            android:text="@string/open_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" android:textColor="@color/colorBlack"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:id="@+id/tv_open_account_header" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <com.shuhart.stepview.StepView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="16dp"
            app:sv_selectedCircleColor="@color/colorPrimaryDark"
            app:sv_selectedTextColor="@color/colorBlack"
            app:sv_stepLineWidth="2dp" app:sv_steps="@array/new_account_step"
            app:sv_stepPadding="4dp" app:sv_stepsNumber="3"
            app:sv_nextTextColor="@color/colorGray"
            app:sv_nextStepLineColor="@color/colorGray"
            app:sv_doneCircleColor="@color/colorPrimaryDark"
            app:sv_doneStepLineColor="@color/colorPrimaryDark"
            app:sv_doneCircleRadius="12dp"
            app:sv_doneStepMarkColor="@color/colorPrimary"
            app:sv_doneTextColor="@color/colorBlack"
            app:sv_selectedCircleRadius="16dp"
            app:sv_selectedStepNumberColor="@color/colorPrimary"
            app:sv_stepNumberTextSize="12sp"
            app:sv_animationType="Line" android:layout_marginBottom="8dp"
            android:id="@+id/sv_account_opening" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_open_account_header"/>


    <Button
            android:text="@string/Next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.9"
            android:background="@drawable/rc_button_background" android:textColor="@color/colorYellow"
            android:id="@+id/btn_next" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            app:backgroundTint="@color/colorPrimary"
            android:clickable="true" app:srcCompat="@drawable/comment"
            android:id="@+id/floatingActionButton"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_next" android:layout_marginBottom="96dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <include android:layout_width="0dp" android:layout_height="0dp" layout="@layout/content_contact"
             app:layout_constraintTop_toBottomOf="@+id/sv_account_opening" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_next"/>
    <!--<ScrollView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="0dp" android:layout_marginBottom="8dp"-->
            <!--app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/sv_account_opening" app:layout_constraintEnd_toEndOf="parent"-->
            <!--android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"-->
            <!--android:layout_marginStart="8dp">-->
        <!--<androidx.constraintlayout.widget.ConstraintLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

            <!--<LinearLayout-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="60dp"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:background="@drawable/rc_edit_text_background"-->
                    <!--app:layout_constraintWidth_percent="0.9"-->
                    <!--android:id="@+id/ll_email"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:paddingTop="8dp"-->
                    <!--android:paddingStart="0dp"-->
                    <!--android:paddingEnd="0dp"-->
                    <!--android:paddingBottom="8dp"-->
                    <!--app:layout_constraintEnd_toEndOf="parent"-->
                    <!--app:layout_constraintStart_toStartOf="parent"-->
                    <!--android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">-->

                <!--<androidx.appcompat.widget.AppCompatImageView-->
                        <!--android:src="@drawable/message"-->
                        <!--android:padding="14dp"-->
                        <!--android:scaleType="centerCrop"-->
                        <!--android:adjustViewBounds="true"-->
                        <!--android:layout_width="48dp"-->
                        <!--android:layout_height="48dp"/>-->

                <!--<EditText-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:inputType="textEmailAddress"-->
                        <!--android:ems="10"-->
                        <!--android:background="@color/colorPrimary"-->
                        <!--android:id="@+id/et_email"-->
                        <!--android:padding="8dp"-->
                        <!--android:layout_marginEnd="8dp"-->
                        <!--android:layout_weight="1"-->
                        <!--android:hint="@string/email"/>-->

            <!--</LinearLayout>-->
            <!--<TextView-->
                    <!--android:text="@string/email"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/tv_email" app:layout_constraintStart_toStartOf="@+id/ll_email"-->
                    <!--app:layout_constraintBottom_toTopOf="@+id/ll_email"-->
                    <!--app:layout_constraintEnd_toEndOf="@+id/ll_email" android:layout_marginBottom="8dp"/>-->
            <!--<LinearLayout-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="60dp"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:paddingTop="8dp"-->
                    <!--android:paddingStart="0dp"-->
                    <!--android:paddingEnd="0dp"-->
                    <!--android:paddingBottom="8dp"-->
                    <!--android:background="@drawable/rc_edit_text_background"-->
                    <!--app:layout_constraintWidth_percent="0.9"-->
                    <!--app:layout_constraintStart_toStartOf="parent"-->
                    <!--android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"-->
                    <!--app:layout_constraintHorizontal_bias="0.48"-->
                    <!--android:id="@+id/linearLayout"-->
                    <!--android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3">-->

                <!--<androidx.appcompat.widget.AppCompatImageView-->
                        <!--android:src="@drawable/phone"-->
                        <!--android:padding="12dp"-->
                        <!--android:scaleType="centerCrop"-->
                        <!--android:adjustViewBounds="true"-->
                        <!--android:layout_width="48dp"-->
                        <!--android:layout_height="48dp"/>-->

                <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/country_code"-->
                        <!--android:textColor="@color/colorGray"-->
                        <!--android:textAppearance="@style/TextAppearance.AppCompat.Small"/>-->

                <!--<View-->
                        <!--android:layout_width="1dp"-->
                        <!--android:layout_gravity="center"-->
                        <!--android:layout_marginTop="8dp"-->
                        <!--android:layout_marginEnd="8dp"-->
                        <!--android:layout_marginStart="16dp"-->
                        <!--android:layout_marginBottom="8dp"-->
                        <!--android:background="@color/colorGray"-->
                        <!--android:layout_height="30dp"/>-->

                <!--<EditText-->
                        <!--android:hint="@string/phone"-->
                        <!--android:layout_weight="1"-->
                        <!--android:inputType="phone"-->
                        <!--android:ems="10"-->
                        <!--android:textAppearance="@style/TextAppearance.AppCompat.Small"-->
                        <!--android:padding="8dp"-->
                        <!--android:layout_marginEnd="4dp"-->
                        <!--android:background="@color/colorPrimary"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"/>-->

            <!--</LinearLayout>-->
            <!--<TextView-->
                    <!--android:text="@string/phone"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/linearLayout"-->
                    <!--app:layout_constraintEnd_toEndOf="@+id/linearLayout"-->
                    <!--android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/ll_email"/>-->
            <!--<TextView-->
                    <!--android:text="@string/state"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/textView4" android:layout_marginTop="16dp"-->
                    <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout"-->
                    <!--app:layout_constraintStart_toStartOf="@+id/linearLayout2"-->
                    <!--app:layout_constraintEnd_toEndOf="@+id/linearLayout2"/>-->
            <!--<LinearLayout-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:background="@drawable/rc_edit_text_background"-->
                    <!--app:layout_constraintWidth_percent="0.9"-->
                    <!--android:layout_height="60dp" android:layout_marginTop="8dp"-->
                    <!--app:layout_constraintTop_toBottomOf="@+id/textView4" android:id="@+id/linearLayout2"-->
                    <!--app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"-->
                    <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">-->

                <!--<Spinner-->
                        <!--android:id="@+id/sp_state"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:background="@android:color/transparent"-->
                        <!--android:clipToPadding="false"-->
                        <!--android:gravity="center"-->
                        <!--android:layout_weight="1"-->
                        <!--android:minHeight="55dp"-->
                        <!--android:spinnerMode="dropdown">-->

                <!--</Spinner>-->

                <!--<androidx.appcompat.widget.AppCompatImageView-->
                        <!--android:src="@drawable/ic_down_arrow"-->
                        <!--android:padding="8dp"-->
                        <!--android:scaleType="centerCrop"-->
                        <!--android:adjustViewBounds="true"-->
                        <!--android:layout_width="48dp"-->
                        <!--android:layout_height="48dp"/>-->

            <!--</LinearLayout>-->
            <!--<TextView-->
                    <!--android:text="@string/city"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/textView5"-->
                    <!--app:layout_constraintStart_toStartOf="@+id/linearLayout3"-->
                    <!--app:layout_constraintEnd_toEndOf="@+id/linearLayout3" android:layout_marginTop="16dp"-->
                    <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>-->
            <!--<LinearLayout-->
                    <!--android:orientation="horizontal" android:gravity="center_vertical"-->
                    <!--android:layout_width="0dp" app:layout_constraintWidth_percent="0.9"-->
                    <!--android:layout_height="60dp" android:layout_marginTop="8dp"-->
                    <!--app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"-->
                    <!--android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"-->
                    <!--android:id="@+id/linearLayout3">-->

                <!--<Spinner-->
                        <!--android:id="@+id/sp_city"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:background="@android:color/transparent"-->
                        <!--android:clipToPadding="false"-->
                        <!--android:gravity="center"-->
                        <!--android:layout_weight="1"-->
                        <!--android:minHeight="55dp"-->
                        <!--android:spinnerMode="dropdown">-->

                <!--</Spinner>-->

                <!--<androidx.appcompat.widget.AppCompatImageView-->
                        <!--android:src="@drawable/ic_down_arrow"-->
                        <!--android:padding="8dp"-->
                        <!--android:scaleType="centerCrop"-->
                        <!--android:adjustViewBounds="true"-->
                        <!--android:layout_width="48dp"-->
                        <!--android:layout_height="48dp"/>-->

            <!--</LinearLayout>-->

        <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
    <!--</ScrollView>-->


</androidx.constraintlayout.widget.ConstraintLayout>